--- a/composer.json
+++ b/composer.json
@@ -7,5 +7,9 @@
             "email": "indianayubi@gmail.com"
         }
     ],
-    "require": {}
+    "require": {},
+    "license": "proprietary",
+    "support": {
+        "email": "info@swiftintern.com"
+    }
 }
