--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "vendor/swiftintern",
-    "description": "A Platform for Students to apply to internship with their linkedin profile and companies to sort candidates.",
+    "description": "A Platform for Students to apply to internship with their linkedin profile and companies to sort candidates easily.",
     "authors": [
         {
             "name": "Faizan Ayubi",
