--- a/.htaccess
+++ b/.htaccess
@@ -8,7 +8,8 @@ RewriteRule ^/?$ "http\:\/\/swiftintern\.com\/" [R=301,L]
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_URI} !=/favicon.ico
-RewriteRule ^([a-zA-Z0-9\/\-+_']+)\.?([a-zA-Z]+)?$ ../index.php?url=$1&extension=$2 [QSA,L]
+#RewriteRule ^([a-zA-Z0-9\/\-+_']+)\.?([a-zA-Z]+)?$ ../index.php?url=$1&extension=$2 [QSA,L]
+RewriteRule ^([^.]+)\.?([a-zA-Z]+)?$ ../index.php?url=$1&extension=$2 [QSA,L]
 
 ## EXPIRES CACHING ##
 <IfModule mod_expires.c>
