--- a/.htaccess
+++ b/.htaccess
@@ -10,6 +10,13 @@ RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_URI} !=/favicon.ico
 RewriteRule ^([^.]+)\.?([a-zA-Z]+)?$ index.php?url=$1&extension=$2 [QSA,L]
 
+# Protect Cron.php
+<Files "cron.php">
+    Order deny,allow
+    Allow from 54.169.39.81
+    Deny from all
+</Files>
+
 <ifModule mod_deflate.c>
     AddOutputFilterByType DEFLATE text/html text/plain text/xml application/xml application/xhtml+xml text/css text/javascript application/javascript application/x-javascript
 </ifModule>
